--- a/Game_SDK_Project_1.0.1/res/layout/fast_login.xml
+++ b/Game_SDK_Project_1.0.1/res/layout/fast_login.xml
@@ -3,14 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="40dp"
-    android:gravity="center"
+    android:layout_gravity="center_horizontal"
 
     >
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:background="@drawable/select_login_bg"
         android:orientation="vertical">
 
