修改已有账号登录

--- a/Game_SDK_Project_1.0.1/res/layout/bind_mobile_dialog.xml
+++ b/Game_SDK_Project_1.0.1/res/layout/bind_mobile_dialog.xml
@@ -64,7 +64,7 @@
             <Button
                 android:id="@+id/visit_bind_account"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/select_dialog"
                 android:text="@string/tips_85"
@@ -79,7 +79,7 @@
             <Button
                 android:id="@+id/visit_continue"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/select_dialog"
                 android:text="@string/tips_86"
