--- a/Game_SDK_Project_1.0.1/res/layout/fast_login.xml
+++ b/Game_SDK_Project_1.0.1/res/layout/fast_login.xml
@@ -237,7 +237,7 @@
                         android:layout_height="45.0dip"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:background="@color/Kn_Username"
+                        android:background="@drawable/round_btn_green_tk_click"
                         android:gravity="center"
                         android:padding="5.0dip"
                         android:text="获取验证码"
