--- a/Game_SDK_Project_1.0.1/res/layout/forgot_password_layout.xml
+++ b/Game_SDK_Project_1.0.1/res/layout/forgot_password_layout.xml
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/first_login_edit1"
-                android:hint="请输入手机号"
+                android:hint="请输入手机号或账号"
                 android:paddingLeft="25dp"
                 android:textSize="@dimen/register_user"
                 android:layout_alignParentTop="true"
@@ -153,7 +153,7 @@
 
 
 
-            <RelativeLayout
+         <!--   <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="5dp">
@@ -178,7 +178,7 @@
                     android:textColor="@color/kn_text"
                     android:textSize="@dimen/login_user" />
 
-        </RelativeLayout>
+        </RelativeLayout>-->
 
         <LinearLayout
 
@@ -186,7 +186,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingRight="20dp"
-            android:paddingTop="10dp">
+            android:paddingTop="20dp">
 
             <Button
                 android:id="@+id/zh_qd"
